--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div>
         <div id="description" class="description">
           <div class="proj">
-            <img src="../img/moviesme.png" alt="">
+            <img src="./img/moviesme.png" alt="">
             <div class="proj-title">
               <h2>Moviesme</h2>
               <p>Moveisme is a website to tell people about shows or movie that I have been watched. This is more like a personal project to study more about CSS,HTML, and Javascript</p>
@@ -109,7 +109,7 @@
           </div>
           
           <div class="proj">
-            <img src="../img/javabutik.png" alt="">
+            <img src="./img/javabutik.png" alt="">
             <div class="proj-title">
               <h2>Java Butik Muslim Online Shop</h2>
               <p>This is a final project for Software Project Management. There are many features in this website such as login,register,add to cart, choosing payment method, and CRUD for online store admin. Created with HTML, Boostrap 4, Javascript and PHP</p>
@@ -141,7 +141,7 @@
           <h1>Contact <span class="wave">📧</span></h1>
         </div>
         <div id="description" class="description">
-          <img src="../img/foto.png" alt="Foto diri" class="foto">
+          <img src="./img/foto.png" alt="Foto diri" class="foto">
               <div class="grid-contact">
                 <div class="contact">
                   <a href="https://www.linkedin.com/in/raihan-athallah-25810b208/" target="_blank"><p>Linkedin</p></a>
