fix favicon and add footer

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Raihannn</title>
+    <link rel="icon" type="image/x-icon" href="https://img.icons8.com/color-glass/48/000000/r.png">
     <link rel="stylesheet" href="./src/index.css" />
   </head>
   <body style="background-color: #212121">
@@ -167,9 +168,9 @@
         </div>
       </div>
     </section>
-    <section id="footer">
+    <section id="footer" class="footer">
         <div>
-          <p>© 2021 Raihan Athallah</p>
+          <p>Made with 💗 by Raihan Athallah</p>
         </div>
     </section>
   </body>
