fix html and css for contact

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         </div>
 
         <div class="nav-links">
-          <a href="#profile" target="_blank">Home</a>
-          <a href="#experience" target="_blank">Experiences</a>
-          <a href="#projects" target="_blank">Projects</a>
-          <a href="https://github.com/RaihanAthallah" target="_blank">Github</a>
+          <a href="#PROFILE" target="_blank">Home</a>
+          <a href="#EXPERIENCE" target="_blank">Experiences</a>
+          <a href="#PROJECT" target="_blank">Projects</a>
+          <a href="#CONTACT" target="_blank">Contact</a>
         </div>
       </div>
     </section>
@@ -53,7 +53,7 @@
           <div class="exp">
             <div class="exp-title">
               <h2>Frontend Developer and Wordpress Developer</h2>
-              <span style="color:#14ffec">2023</span>
+              <span style="color:#14ffec"><h3>2023</h3></span>
             </div>
             <p>hayVee</p>
             <div class="exp-desc">
@@ -66,7 +66,7 @@
           <div class="exp">
             <div class="exp-title">
               <h2>Staff Of Talent and Interest</h2>
-              <span style="color:#14ffec">2023</span>
+              <span style="color:#14ffec"><h3>2023</h3></span>
             </div>
             <p>Himpunan Mahasiswa Teknik Komputer Informatika</p>
             <div class="exp-desc">
@@ -145,19 +145,19 @@
           <img src="./img/foto.png" alt="Foto diri" class="foto">
               <div class="grid-contact">
                 <div class="contact">
-                  <a href="https://www.linkedin.com/in/raihan-athallah-25810b208/" target="_blank"><p>Linkedin</p></a>
+                  <a href="https://www.linkedin.com/in/raihan-athallah-25810b208/" target="_blank">Linkedin</a>
                   <!-- <img src="https://img.icons8.com/ios-filled/30/null/javascript.png"/> -->
                 </div>
                 <div class="contact">
-                  <a href="https://github.com/RaihanAthallah" target="_blank"><p>Github</p></a>
+                  <a href="https://github.com/RaihanAthallah" target="_blank">Github</a>
                   <!-- <img src="https://img.icons8.com/external-tal-revivo-bold-tal-revivo/30/null/external-bootstrap-a-free-and-open-source-css-framework-logo-bold-tal-revivo.png"/> -->
                 </div>
                 <div class="contact">
-                  <a href="rraihan1947@gmail.com" target="_blank"><p>Email</p></a>
+                  <a href="rraihan1947@gmail.com" target="_blank">Email</a>
                   <!-- <img src="https://img.icons8.com/ios-filled/30/null/php-logo.png"/> -->
                 </div>
                 <div class="contact">
-                  <a href="https://wa.me/6282141871071" target="_blank"><p>Phone Number</p></a>
+                  <a href="https://wa.me/6282141871071" target="_blank">Whatsapp</a>
                   <!-- <img src="https://img.icons8.com/ios-filled/30/null/php-logo.png"/> -->
                 </div>
               </div>
