--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="index.css" />
+    <title>Raihannn</title>
+    <link rel="icon" type="image/x-icon" href="https://img.icons8.com/color-glass/48/000000/r.png">
+    <link rel="stylesheet" href="./src/index.css" />
   </head>
   <body style="background-color: #212121">
     <section id="navbar">
@@ -23,10 +24,10 @@
         </div>
 
         <div class="nav-links">
-          <a href="#profile" target="_blank">Home</a>
-          <a href="#experience" target="_blank">Experiences</a>
-          <a href="#projects" target="_blank">Projects</a>
-          <a href="https://github.com/RaihanAthallah" target="_blank">Github</a>
+          <a href="#PROFILE" target="_blank">Home</a>
+          <a href="#EXPERIENCE" target="_blank">Experiences</a>
+          <a href="#PROJECT" target="_blank">Projects</a>
+          <a href="#CONTACT" target="_blank">Contact</a>
         </div>
       </div>
     </section>
@@ -52,7 +53,7 @@
           <div class="exp">
             <div class="exp-title">
               <h2>Frontend Developer and Wordpress Developer</h2>
-              <span style="color:#14ffec">2023</span>
+              <span style="color:#14ffec"><h3>2023</h3></span>
             </div>
             <p>hayVee</p>
             <div class="exp-desc">
@@ -65,7 +66,7 @@
           <div class="exp">
             <div class="exp-title">
               <h2>Staff Of Talent and Interest</h2>
-              <span style="color:#14ffec">2023</span>
+              <span style="color:#14ffec"><h3>2023</h3></span>
             </div>
             <p>Himpunan Mahasiswa Teknik Komputer Informatika</p>
             <div class="exp-desc">
@@ -86,7 +87,7 @@
         </div>
         <div id="description" class="description">
           <div class="proj">
-            <img src="../img/moviesme.png" alt="">
+            <img src="./img/moviesme.png" alt="">
             <div class="proj-title">
               <h2>Moviesme</h2>
               <p>Moveisme is a website to tell people about shows or movie that I have been watched. This is more like a personal project to study more about CSS,HTML, and Javascript</p>
@@ -109,7 +110,7 @@
           </div>
           
           <div class="proj">
-            <img src="../img/javabutik.png" alt="">
+            <img src="./img/javabutik.png" alt="">
             <div class="proj-title">
               <h2>Java Butik Muslim Online Shop</h2>
               <p>This is a final project for Software Project Management. There are many features in this website such as login,register,add to cart, choosing payment method, and CRUD for online store admin. Created with HTML, Boostrap 4, Javascript and PHP</p>
@@ -141,22 +142,22 @@
           <h1>Contact <span class="wave">📧</span></h1>
         </div>
         <div id="description" class="description">
-          <img src="../img/foto.png" alt="Foto diri" class="foto">
+          <img src="./img/foto.png" alt="Foto diri" class="foto">
               <div class="grid-contact">
                 <div class="contact">
-                  <a href="https://www.linkedin.com/in/raihan-athallah-25810b208/" target="_blank"><p>Linkedin</p></a>
+                  <a href="https://www.linkedin.com/in/raihan-athallah-25810b208/" target="_blank">Linkedin</a>
                   <!-- <img src="https://img.icons8.com/ios-filled/30/null/javascript.png"/> -->
                 </div>
                 <div class="contact">
-                  <a href="https://github.com/RaihanAthallah" target="_blank"><p>Github</p></a>
+                  <a href="https://github.com/RaihanAthallah" target="_blank">Github</a>
                   <!-- <img src="https://img.icons8.com/external-tal-revivo-bold-tal-revivo/30/null/external-bootstrap-a-free-and-open-source-css-framework-logo-bold-tal-revivo.png"/> -->
                 </div>
                 <div class="contact">
-                  <a href="rraihan1947@gmail.com" target="_blank"><p>Email</p></a>
+                  <a href="rraihan1947@gmail.com" target="_blank">Email</a>
                   <!-- <img src="https://img.icons8.com/ios-filled/30/null/php-logo.png"/> -->
                 </div>
                 <div class="contact">
-                  <a href="https://wa.me/6282141871071" target="_blank"><p>Phone Number</p></a>
+                  <a href="https://wa.me/6282141871071" target="_blank">Whatsapp</a>
                   <!-- <img src="https://img.icons8.com/ios-filled/30/null/php-logo.png"/> -->
                 </div>
               </div>
@@ -167,9 +168,9 @@
         </div>
       </div>
     </section>
-    <section id="footer">
+    <section id="footer" class="footer">
         <div>
-          <p>© 2021 Raihan Athallah</p>
+          <p>Made with 💗 by Raihan Athallah</p>
         </div>
     </section>
   </body>
