--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Raihannn</title>
     <link rel="icon" type="image/x-icon" href="https://img.icons8.com/color-glass/48/000000/r.png">
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./src/index.css" />
   </head>
   <body style="background-color: #212121">
     <section id="navbar">
@@ -121,7 +121,7 @@
         </div>
         <div id="description" class="description">
           <div class="proj clickable" onclick="window.location.href='https://satudikti.id/';">
-            <img src="../img/satudikti.png" alt="">
+            <img src="./img/satudikti.png" alt="">
             <div class="proj-title">
               <h2>Satudikti</h2>
               <p>Satu platform terintegrasi untuk mendukung berbagai layanan pada Perguruan Tinggi.
@@ -147,7 +147,7 @@
           </div>
           
           <div class="proj clickable">
-            <img src="../img/javabutik.png" alt="">
+            <img src="./img/javabutik.png" alt="">
             <div class="proj-title">
               <h2>Java Butik Muslim Online Shop</h2>
               <p>This is a final project for Software Project Management. There are many features in this website such as login, register, add to cart, choosing payment method, and CRUD for online store admin. Created with HTML, Boostrap 4, Javascript, and PHP</p>
@@ -179,7 +179,7 @@
           <h1>Contact <span class="wave">📧</span></h1>
         </div>
         <div id="description" class="description">
-          <img src="../img/foto.png" alt="Foto diri" class="foto" width="200px">
+          <img src="./img/foto.png" alt="Foto diri" class="foto" width="200px">
               <div class="grid-contact">
                 <div class="contact">
                   <a href="https://www.linkedin.com/in/raihan-athallah-25810b208/" target="_blank">Linkedin</a>
