--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Raihannn</title>
     <link rel="icon" type="image/x-icon" href="https://img.icons8.com/color-glass/48/000000/r.png">
-    <link rel="stylesheet" href="./src/index.css" />
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body style="background-color: #212121">
     <section id="navbar">
@@ -137,7 +137,7 @@
                   <img src=""/>
                 </div>
                 <div class="stack">
-                  <img src="../img/golang.png" width="40"/>
+                  <img src="./img/golang.png" width="40"/>
                 </div>
                 <div class="stack">
                   <img src="https://img.icons8.com/external-tal-revivo-bold-tal-revivo/30/null/external-bootstrap-a-free-and-open-source-css-framework-logo-bold-tal-revivo.png"/>
